fixed title for PostScriptumMC

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta name="msapplication-TileColor" content="#212121">
     <meta name="theme-color" content="#212121">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100:300,400,500,700,900|Material+Icons" rel="stylesheet">
-    <title>SquadMC - The Mortar Calculator for Squad</title>
+    <title>PostScriptumMC - The Mortar Calculator for PostScriptum</title>
   </head>
   <body>
     <noscript>
