added body style in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <!--<link href="https://fonts.googleapis.com/css?family=Roboto:100:300,400,500,700,900|Material+Icons" rel="stylesheet">-->
     <title>SquadMC - The Mortar Calculator for Squad</title>
   </head>
-  <body>
+  <body style="overflow: hidden; background-color: #212121">
     <noscript>
       <strong>We're sorry but SquadMC doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
